--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         items that have certain properties such as color. I would further explain that they are very similar to how things are in today’s
         world, where there are properties, such as material, transparency, and size.
       </p>
-      <p>I would not tell them that these are actually objects that you can control using a method of programming called
+      <p>I would not tell them that these are actually objects that you can manipulate and transform using a method of programming called
         object-oriented-programming. Also that they all have their own list of functions and methods defined within the program’s API
         database, and we just use these APIs to enhance the game environment and make use of the objects to create a game’s hierarchy.
         These terms over-complicate the purpose of what I am trying to convey to the student and what the student needs to get off to a
